@@ -1,0 +1,5 @@
+package MyModel8;
+
+use base 'DBIx::Custom::Model';
+
+1;
