@@ -1,0 +1,5 @@
+package MyModel8::table1;
+
+use base 'MyModel8';
+
+1;
